...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/storyList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
